# WhaBotApk

./: .gitignore  README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  google-services.json.example
app/src/androidTest/java/com/example/whabotpro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs-project/: bootstrap.mjs  main.js  main.mjs  package.json
app/src/main/cpp/: nodejs-bridge.cpp
app/src/main/java/com/example/whabotpro/: MainActivity.kt  WhaBotApp.kt
app/src/main/java/com/example/whabotpro/ai/: AIProvider.kt  Agent.kt  FirebaseRawDataSync.kt  GeminiClient.kt  GroqClient.kt  MistralClient.kt  RawDataProcessor.kt
app/src/main/java/com/example/whabotpro/data/db/: AppDatabase.kt  Daos.kt
app/src/main/java/com/example/whabotpro/data/model/: Models.kt
app/src/main/java/com/example/whabotpro/data/store/: DataRepository.kt
app/src/main/java/com/example/whabotpro/engine/: EngineManager.kt  NodeJSAssetsHelper.kt  NodeJSEngine.kt  WhatsAppEngine.kt
app/src/main/java/com/example/whabotpro/service/: BootReceiver.kt  WhaBotService.kt
app/src/main/java/com/example/whabotpro/ui/: WhaBotScaffold.kt
app/src/main/java/com/example/whabotpro/ui/component/: Components.kt
app/src/main/java/com/example/whabotpro/ui/screen/: AddDataScreen.kt  AddRawDataScreen.kt  InboxScreen.kt  (+13 more)
app/src/main/java/com/example/whabotpro/utils/: SimNumberHelper.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/whabotpro/: ExampleUnitTest.kt
(+5 files in other folders)
